# VirtuaLAP

./: .gitmodules  CMakeLists.txt  Readme.md
Android/app/: build.gradle
Android/app/src/androidTest/java/de/virtualap/: ExampleInstrumentedTest.java
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: native-lib.cpp
Android/app/src/main/java/de/virtualap/: MainActivity.java
Android/app/src/main/res/drawable-v24/: ic_launcher_background.xml  ic_launcher_foreground.xml
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/de/virtualap/: ExampleUnitTest.java
Android/gradle/wrapper/: gradle-wrapper.properties
Data/: default.fs.glsl  default.gs.glsl  default.vs.glsl  fsq.fs.glsl  fsq.vs.glsl  renamepictures.sh
Desktop/: CMakeLists.txt  UI.cpp  UI.h  main.cpp
Desktop/Dependencies/OpenCV/: OpenCVConfig.cmake
Desktop/Dependencies/OpenCV/include/opencv2/: cvconfig.h
Desktop/Dependencies/OpenCV/x64/mingw/staticlib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
Desktop/Dependencies/glad/include/glad/: glad.h
Desktop/Dependencies/glad/src/: glad.c
Global/: Core.cpp  Core.h  ImageAnalysis.cpp  ImageAnalysis.h  PipelineInterfaces.h  PlatformInterfaces.h  Render.cpp  Render.h  Render_BSpline.cpp  Render_BSpline.h  Render_Constants.h  Render_OGL.h  Render_Shader.cpp  Render_Shader.h  Render_Vertex.h  Simulation.cpp  Simulation.h  TrackGeneration.cpp  TrackGeneration.h
